Syncing with branch updates

--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -5,4 +5,8 @@ markers =
   stress: marks stress tests
   mg: marks a test as multi-GPU
   memleak: marks a test as a memory leak test
+  no_bad_cuml_array_check: prevents pytest from checking for bad cumlarray uses
 
+testpaths = cuml/test
+
+addopts = -p "cuml_plugins.custom_options_plugin" -p "cuml_plugins.quick_run_plugin" --import-mode=importlib
