Syncing with feature branch

--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -9,4 +9,4 @@ markers =
 
 testpaths = cuml/test
 
-addopts = -p "cuml_plugins.custom_options_plugin" -p "cuml_plugins.quick_run_plugin" --import-mode=importlib
+addopts = --import-mode=importlib
